# hashserver

./: .pre-commit-config.yaml  CMakeLists.txt  NOTES.md  README.md  conanfile.txt  integration_tests.py  vcpkg.json
.github/workflows/: build.yml
cmake/: Dependencies.cmake
include/hashserver/: serverlib.hpp
lib/: CMakeLists.txt
lib/hashserver/: CMakeLists.txt  connection.cpp  hasher.cpp  server.cpp  serverlib.cpp
lib/include/hashserver/: connection.hpp  hasher.hpp  server.hpp  serverlib.hpp
lib/include/hashserver/detail/: asio_fwd.hpp
profiles/linux/: x86_64-debug  x86_64-release
profiles/windows/: windows-common  x86_64-release  x86_64-release-msvc17
src/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  serverlib_tests.cpp
